[package]
name = "ccsw"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Claude Code account switcher — run multiple Claude Code accounts concurrently with shared plugins and settings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jv-vogler/claude-acc-switcher"
keywords = ["claude", "cli", "profiles", "accounts"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccsw"
path = "src/main.rs"

[lib]
name = "ccsw"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
inquire = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
